--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -1,17 +1,32 @@
-on: push
-name: deploy
+name: build_and_push_to_docker
+on:
+  push:
+    branches:
+      - 'master'
+
 jobs:
-  deploy:
-    name: deploy to cluster
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: build and push to docker
-      uses: docker/build-push-action@v1.1.1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ github.repository }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
         tag_with_ref: true
         tag_with_sha: true
-        tags: landing-page 
+        with:
+          push: true
+          tags: landing-page
+          
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
