--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -21,11 +21,10 @@ jobs:
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
-        tag_with_ref: true
-        tag_with_sha: true
         with:
           push: true
-          tags: landing-page
+          tags: ${{GITHUB_REPOSITORY}}, ${{GITHUB_SHA}}, ${{GITHUB_REF}}
+          
           
       -
         name: Image digest
