--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{GITHUB_REPOSITORY}}, ${{GITHUB_SHA}}, ${{GITHUB_REF}}
+          tags: ${{github.repository}}:landingpage, ${{github.sha}}, ${{github.ref}}
           
           
       -
