--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -25,10 +25,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push
+        name: Build 
         id: docker_build
         uses: docker/build-push-action@v2
         with: 
-          push: true
-          tags: ${{github.repository}}:landingpage, ${{github.sha}}, ${{github.ref}}
+          load: true
+          tags: ${{github.sha}}         
+      -
+        name: push
+        run: docker push ${{github.repository}}:landingpage
+        
         
