--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       -
         name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
+        run: echo ${{ steps.buildx.outputs.platforms }} && ${{ github.repository }} 
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -29,17 +29,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with: 
-          load: true
-          tags: ${{github.sha}}         
-      -
-        name: Inspect builder
-        run: |
-          echo "Name:      ${{ steps.buildx.outputs.name }}"
-          echo "Endpoint:  ${{ steps.buildx.outputs.endpoint }}"
-          echo "Status:    ${{ steps.buildx.outputs.status }}"
-          echo "Flags:     ${{ steps.buildx.outputs.flags }}"
-          echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
-      -
-        name: push
-        run: docker push ${{github.repository}}:landingpage
+          push: true
+          tags: ${{github.}}
+
+
+
       
