--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       -
         name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }} && ${{ github.repository }} 
+        run: echo ${{ steps.buildx.outputs.platforms }} && ${{ github.owner }} 
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
