--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with: 
           push: true
-          tags: ${{github.repository}}
+          tags: ${{github.repository}}:landinpage
 
 
 
