--- a/.github/workflows/build_and_push_to_docker.yaml
+++ b/.github/workflows/build_and_push_to_docker.yaml
@@ -16,9 +16,6 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }} && ${{ github.owner }} 
-      -
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
@@ -30,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v2
         with: 
           push: true
-          tags: ${{github.repository}}:landinpage
+          tags: ${{github.repository}}:landingpage
 
 
 
