--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,6 @@ version: '3'
 services:
         www:
                 image: tspdevops/tsp-web-frontend:landingpage
+                restart: unless-stopped
                 ports:
-                        - "8080:80"
+                - "8080:80"
